--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/df15dc3d30.js"></script>
+
     <link rel="stylesheet" type="text/css" href="css/csshake.min.css">
 
     <!-- Custom CSS -->
@@ -107,15 +108,15 @@
         <p class="lead">每个游戏都是一段独特的故事，<br>每个玩家都有自己的游戏人生。</p>
         <p class="lead">为游戏人提供最好的发布平台，<br> 为玩家提供顶级的游戏体验，<br>是我们开发威盒的追求。</p>
     </div>
-
+    
     <!-- Second Featurette -->
-    <div class="featurette-background">
+    <div class="featurette-background bg-primary">
         <div class="featurette container" id="features" >
             <div class="panel second-featurette">
-                <h2 class="featurette-heading" style="color:white;">游戏玩家的大满足<br>
+                <h2 class="featurette-heading" >游戏玩家的大满足<br>
                     <span class="text-muted" >Uniform Gaming Experience</span>
                 </h2>
-                <p class="lead" style="color: white;">在威盒商店下载海量精品独立游戏，<br>使用威盒一键安装游戏及依赖包，<br>在不同终端云同步游戏进度，<br>在威盒社区与同好和开发者交流心得……<br>威盒能满足你对游戏平台的一切想象。</p>
+                <p class="lead" >在威盒商店下载海量精品独立游戏，<br>使用威盒一键安装游戏及依赖包，<br>在不同终端云同步游戏进度，<br>在威盒社区与同好和开发者交流心得……<br>威盒能满足你对游戏平台的一切想象。</p>
             </div>
         </div>
     </div>
@@ -129,23 +130,96 @@
         <p class="lead">在威盒社区与玩家直接互动，<br>获取灵感，释放想象。</p>
 
     </div>
-
-    <!-- Fourth Featurette -->
-    <div class="featurette" id="download">
-        <h2 class="featurette-heading">下载威盒客户端<br>
-        <span class="text-muted">Download</span>
-        </h2>
-        
+    <div class="featurette-bg2">
+        <div id="features" class="featurette container">
+            <div class="row text-center">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <h2 class="featurette-heading" >平台特色<br>
+                        <span class="text-muted" style="color:gray;">Features</span>
+                    </h2>
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa fa-stack fa-4x">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-cloud fa-stack-1x text-primary" style="color:white;"></i>
+                                </span>
+                                <h4>
+                                    <strong>云端平台</strong>
+                                </h4>
+                                <p>单机游戏也能上云！自动存档，云端保存，在不同设备上也能一键读档。威盒带来最便捷的体验。</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa fa-stack fa-4x">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-comments fa-stack-1x text-primary" style="color:white;"></i>
+                                </span>
+                                <h4>
+                                    <strong>威盒社区</strong>
+                                </h4>
+                                <p>与全世界的玩家分享游戏乐趣，与开发者零距离交流。认识同好，享受属于每个人的冒险。</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-shield fa-stack-1x text-primary" style="color: white;"></i>
+                            </span>
+                                <h4>
+                                    <strong>正版游戏</strong>
+                                </h4>
+                                <p>每个游戏都是独立程序开发者的心血结晶。我们只接受正版游戏，为开发者和玩家提供最优质的服务。</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa fa-stack fa-4x">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-users fa-stack-1x text-primary" style="color:white;"></i>
+                                </span>
+                                <h4>
+                                    <strong>专业团队</strong>
+                                </h4>
+                                <p>一群来自世界各地的游戏爱好者，为给独立游戏提供一个简洁完善的游戏平台聚集在一起。</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.row (nested) -->
+                </div>
+                <!-- /.col-lg-10 -->
+            </div>
+            <!-- /.row -->
+        </div>
     </div>
-    <!-- Footer -->
-    <footer>
+    <!-- Fourth Featurette -->
+    <div class="featurette container" id="download">
         <div class="row">
-            <div class="col-lg-12">
-                <p>Copyright &copy; Your Website 2014</p>
+            <h2 class="featurette-heading">下载威盒客户端<br>
+            <span class="text-muted">Download</span>
+            </h2>
+            <div class="col-lg-12 text-center">                
+                <a href="#" class="btn btn-primary"><i class="fa fa-apple"></i> MacOS 版本</a>
+                <a href="#" class="btn btn-success"><i class="fa fa-windows"></i> Windows 版本</a>
             </div>
         </div>
-    </footer>
-
+    </div>
+  
+    <!-- Footer -->
+    <div class="footer-bg">
+    <div class="featurette container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div style="text-align:center">
+                    <p style="color: white"> 威籁程序 ( 浙ICP备12024298号 ) </p>
+                    <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=33011002011034" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.vlabpro.com/beian.png" style="float:left;"><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color: white;">浙公网安备 33011002011034号</p></a>
+    </div>
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
 
 </html>
