minor bug fixed

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                         <a class="page-scroll" href="#about">关于</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#functions">功能</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#features">特色</a>
                     </li>
                     <li>
@@ -111,7 +114,7 @@
     
     <!-- Second Featurette -->
     <div class="featurette-background bg-primary">
-        <div class="featurette container" id="features" >
+        <div class="featurette container" id="functions" >
             <div class="panel second-featurette">
                 <h2 class="featurette-heading" >游戏玩家的大满足<br>
                     <span class="text-muted" >Uniform Gaming Experience</span>
