--- a/index.html
+++ b/index.html
@@ -215,10 +215,16 @@
     <div class="featurette container">
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-                <div style="text-align:center; background-color: rgba(0,0,0,0.4);padding: 10px" class="panel">
-                    <p style="color: white"> 威籁程序 ( 浙ICP备12024298号 ) </p>
-                    <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=33011002011034" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.vlabpro.com/beian.png" style="float:left;"><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color: white;">浙公网安备 33011002011034号</p></a>
-    </div>
+                <div class="footer-sign panel">
+                    <div class="footer-signature">
+                        <p style="color: white"> 威籁程序 ( 浙ICP备12024298号 ) </p>
+                        <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=33011002011034" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.vlabpro.com/beian.png" style="float:left;"><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color: white;">浙公网安备 33011002011034号</p></a>
+                    </div>
+                    <div class="footer-cover">
+                        <p><img src="img/logo.png" style="height:30px"> <strong>Designed by VBox</strong></p>
+                        <p style="font-size: 15px;color: #eeeeee"> Copyright &copy VBox 2013-2016</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
